# raylib-bindings

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_flags.txt  gen_raylib.py  main.c  main.py  pyrightconfig.json
output/: raylib.c  raylib.pyi
